--- a/booking.html
+++ b/booking.html
@@ -1,1 +1,18 @@
+<section id="booking">
+  <h1>🖤 Book With B.Lolo</h1>
+
+  <div class="booking-policies">
+    <h2>Before You Book:</h2>
+    <ul>
+      <li>No deposit required to book.</li>
+      <li>Please cancel at least 24 hours in advance or a $30 cancellation fee will apply.</li>
+      <li>Hair is included for most styles unless stated otherwise.</li>
+      <li>Want color? Add it in your booking notes or text <a href="tel:3179385615">317-938-5615</a>.</li>
+    </ul>
+  </div>
+
+  <div class="book-now-cta">
+    <a href="https://blolo.square.site" target="_blank" class="book-btn">✨ Secure Your Slay Now ✨</a>
+  </div>
+</section>
 
