--- a/booking.html
+++ b/booking.html
@@ -1,6 +1,18 @@
 <section id="booking">
   <h1>🖤 Book With B.Lolo</h1>
 
+<!-- 🌟 B.Lolo Navigation Bar -->
+<nav class="navbar">
+  <div class="nav-brand">B.Lolo</div>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="booking.html">Book Now</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
+
+  
   <div class="booking-policies">
     <h2>Before You Book:</h2>
     <ul>
