--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!-- 🌟 B.Lolo Navigation Bar -->
+<nav class="navbar">
+  <div class="nav-brand">B.Lolo</div>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="booking.html">Book Now</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
 
