--- a/services.html
+++ b/services.html
@@ -1,4 +1,16 @@
 <!-- Blolo Service Menu HTML - Sectioned & Ready -->
+
+<!-- 🌟 B.Lolo Navigation Bar -->
+<nav class="navbar">
+  <div class="nav-brand">B.Lolo</div>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="booking.html">Book Now</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
+
 <section id="braids" class="service-category">
   <h2 class="category-title">🔥 Braids</h2>
 
