--- a/about.html
+++ b/about.html
@@ -9,3 +9,8 @@
   </ul>
 </nav>
 
+<!-- ✨ Footer -->
+<footer class="site-footer">
+  <p>Styled with Pride. Slayed with Love. 💖</p>
+  <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
+</footer>
