--- a/services.html
+++ b/services.html
@@ -295,3 +295,8 @@
   </div>
 </section>
 
+<!-- ✨ Footer -->
+<footer class="site-footer">
+  <p>Styled with Pride. Slayed with Love. 💖</p>
+  <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
+</footer>
