--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
-<!-- 🌟 B.Lolo Navigation Bar -->
-<nav class="navbar">
-  <div class="nav-brand">B.Lolo</div>
-  <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="booking.html">Book Now</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B.Lolo | Home</title>
+  <link rel="stylesheet" href="style/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-brand">B.Lolo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Book Now</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
 
-<!-- ✨ Footer -->
-<footer class="site-footer">
-  <p>Styled with Pride. Slayed with Love. 💖</p>
-  <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
-</footer>
+  <header class="hero">
+    <h1>Welcome to B.Lolo’s World</h1>
+    <p>Hair that speaks volumes. Styles that stop traffic.</p>
+    <a href="booking.html" class="book-btn">✨ Book Your Slay ✨</a>
+  </header>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <p>Styled with Pride. Slayed with Love. 💖</p>
+    <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
+  </footer>
+</body>
+</html>
