--- a/services.html
+++ b/services.html
@@ -1,302 +1,32 @@
-<!-- Blolo Service Menu HTML - Sectioned & Ready -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B.Lolo | Services</title>
+  <link rel="stylesheet" href="style/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar">
+    <div class="nav-brand">B.Lolo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Book Now</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
 
-<!-- 🌟 B.Lolo Navigation Bar -->
-<nav class="navbar">
-  <div class="nav-brand">B.Lolo</div>
-  <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="booking.html">Book Now</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</nav>
+  <main>
+    <!-- Paste everything from the service menu doc here -->
+    <!-- Start with: <section id="braids" class="service-category"> -->
+    <!-- All sections will render perfectly with the CSS you've added -->
+  </main>
 
-<section id="braids" class="service-category">
-  <h2 class="category-title">🔥 Braids</h2>
-
-  <div class="service-card">
-    <h3>Small Knotless Braids</h3>
-    <p><strong>💰 $300</strong> | ⏱ 10 hrs | ✅ Hair Included</p>
-    <p>Small size, mid-back length. Longer = add-on. Add color in booking note or text <a href="tel:3179385615">317-938-5615</a>.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Knotless Braids – Large</h3>
-    <p><strong>💰 $130</strong> | ⏱ 3 hrs | ✅ Hair Included</p>
-    <p>Large size, mid-back length. Longer = add-on.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Knotless Braids – Medium</h3>
-    <p><strong>💰 $180</strong> | ⏱ 5 hrs 30 mins | ✅ Hair Included</p>
-    <p>Mid-back length. Add color in booking note or text 317-938-5615.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Knotless Braids – Jumbo</h3>
-    <p><strong>💰 $100</strong> | ⏱ 2 hrs 30 mins | ✅ Hair Included</p>
-    <p>Fast, easy, and perfect for a bold look.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Passion Twists</h3>
-    <p><strong>💰 $180</strong> | ⏱ 5 hrs 30 mins</p>
-    <p>Soft, juicy, and vacation-ready.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Medium Box Braids</h3>
-    <p><strong>💰 $170</strong> | ⏱ 5 hrs | ✅ Hair Included</p>
-    <p>Mid-back length. Customize part style in message or at appointment.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Large Box Braids</h3>
-    <p><strong>💰 $120</strong> | ⏱ 3 hrs 30 mins | ✅ Hair Included</p>
-    <p>Mid-back length. Customize part style in message or at appointment.</p>
-  </div>
-</section>
-
-<section id="kids" class="service-category">
-  <h2 class="category-title">🎀 Kids Styles (10 & Under)</h2>
-
-  <div class="service-card">
-    <h3>Kids Braids (No Weave)</h3>
-    <p><strong>💰 $60</strong> | ⏱ 3 hrs 30 mins</p>
-    <p>Accessories? Leave your color scheme in notes or text 317-938-5615.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Kids Knotless Braids – Medium</h3>
-    <p><strong>💰 $110</strong> | ⏱ 5 hrs 30 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Kids Box Braids – Medium</h3>
-    <p><strong>💰 $110</strong> | ⏱ 5 hrs 30 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Kids Starter Locs</h3>
-    <p><strong>💰 $75</strong> | ⏱ 4 hrs</p>
-    <p>2-strand twists or comb coils. Man bun or full head. Questions? Text 317-938-5615.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Kids 2-Strand Twists (No Weave)</h3>
-    <p><strong>💰 $75</strong> | ⏱ 3 hrs 30 mins</p>
-    <p>Includes optional styling with accessories.</p>
-  </div>
-</section>
-
-<section id="locs" class="service-category">
-  <h2 class="category-title">🔗 Locs</h2>
-
-  <div class="service-card">
-    <h3>Loc Retwist – Above Mid-Back</h3>
-    <p><strong>💰 $100</strong> | ⏱ 3 hrs</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Loc Retwist – Below Mid-Back</h3>
-    <p><strong>💰 $140</strong> | ⏱ 4 hrs 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Starter Locs – Grid Method</h3>
-    <p><strong>💰 $130</strong> | ⏱ 4 hrs</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Micro Locs Installation (No Added Hair)</h3>
-    <p><strong>💰 Varies</strong> | ⏱ 8 hrs 15 mins</p>
-    <p>Price may change depending on hair length/density. Book a consultation for details.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Micro Locs Maintenance (4–6 Weeks)</h3>
-    <p><strong>💰 $200</strong> | ⏱ 6 hrs 15 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Faux Locs / Butterfly / Soft Locs</h3>
-    <p><strong>💰 $300</strong> | ⏱ 6 hrs | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Boho Braids Over Locs</h3>
-    <p><strong>💰 Varies</strong> | ⏱ 6 hrs 30 mins | ✅ Hair Included</p>
-    <p>Text color + inspo to 317-938-5615. Appointments at 4010 W 86th St, Suite K.</p>
-  </div>
-</section>
-
-<section id="natural" class="service-category">
-  <h2 class="category-title">🌿 Natural Hair</h2>
-
-  <div class="service-card">
-    <h3>Natural Twist/Braid Style (No Hair Added)</h3>
-    <p><strong>💰 $75</strong> | ⏱ 2 hrs 30 mins</p>
-    <p>Medium size or larger. Text 317-938-5615 for inspo pics.</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Shampoo + Curl Definition</h3>
-    <p><strong>💰 $50</strong> | ⏱ 1 hr 30 mins</p>
-  </div>
-</section>
-
-<section id="silkpress" class="service-category">
-  <h2 class="category-title">💇🏽‍♀️ Silky Press</h2>
-
-  <div class="service-card">
-    <h3>Silk Press + Shampoo/Trim</h3>
-    <p><strong>💰 $80</strong> | ⏱ 2 hrs 30 mins</p>
-  </div>
-</section>
-
-<section id="color" class="service-category">
-  <h2 class="category-title">🎨 Color Services</h2>
-
-  <div class="service-card">
-    <h3>Full Color – Single Process</h3>
-    <p><strong>💰 $50</strong> | ⏱ 1 hr</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Semi-Permanent Color</h3>
-    <p><strong>💰 $50</strong> | ⏱ 1 hr 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Re-Growth Tint Only</h3>
-    <p><strong>💰 $40</strong> | ⏱ 1 hr</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Two-Step Color Process</h3>
-    <p><strong>💰 $100</strong> | ⏱ 30 mins</p>
-  </div>
-</section>
-
-<section id="extensions" class="service-category">
-  <h2 class="category-title">✨ Extensions / Weaves</h2>
-
-  <div class="service-card">
-    <h3>Sew-In (Hair Not Included)</h3>
-    <p><strong>💰 $160</strong> | ⏱ 4 hrs 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Quick Weave</h3>
-    <p><strong>💰 $80</strong> | ⏱ 3 hrs</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Ponytail Quickweave/Sew-in Method</h3>
-    <p><strong>💰 $100</strong> | ⏱ 3 hrs 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Tape-In Extensions</h3>
-    <p><strong>💰 $175</strong> | ⏱ 3 hrs 30 mins</p>
-  </div>
-</section>
-
-<section id="feedins" class="service-category">
-  <h2 class="category-title">🔥 Stitch Braids / Feed-ins</h2>
-
-  <div class="service-card">
-    <h3>2 Braids – No Design</h3>
-    <p><strong>💰 $50</strong> | ⏱ 2 hrs | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>2 Braids – With Design</h3>
-    <p><strong>💰 $65</strong> | ⏱ 3 hrs 30 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>1–4 Stitch Braids – No Design</h3>
-    <p><strong>💰 $60</strong> | ⏱ 3 hrs | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>1–4 Stitch Braids – With Design</h3>
-    <p><strong>💰 $75</strong> | ⏱ 3 hrs | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>5–10 Stitch Braids – With Design</h3>
-    <p><strong>💰 $100</strong> | ⏱ 4 hrs 15 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>5–10 Stitch Braids – No Design</h3>
-    <p><strong>💰 $85</strong> | ⏱ 4 hrs 15 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>3 Layered Feed-In Braids</h3>
-    <p><strong>💰 $150</strong> | ⏱ 4 hrs 30 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Tribal Braids – Smedium</h3>
-    <p><strong>💰 $160</strong> | ⏱ 5 hrs 30 mins | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Tribal Braids – Large</h3>
-    <p><strong>💰 $130</strong> | ⏱ 4 hrs | ✅ Hair Included</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Lemonade Braids – Smedium</h3>
-    <p><strong>💰 $160</strong> | ⏱ 5 hrs 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Mohawk Knotless Braids</h3>
-    <p><strong>💰 $150</strong> | ⏱ 5 hrs | ✅ Hair Included</p>
-  </div>
-</section>
-
-<section id="add-ons" class="service-category">
-  <h2 class="category-title">🧾 Add-Ons & Consultations</h2>
-
-  <div class="service-card">
-    <h3>Flat Iron Before Braids</h3>
-    <p><strong>💰 $30</strong> | ⏱ 1 hr 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Boho Curls Add-On</h3>
-    <p><strong>💰 from $30</strong> | ⏱ 2 hrs</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Butt Length Add-On</h3>
-    <p><strong>💰 from $30</strong> | ⏱ 1 hr 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>Take Down (Braids/Sew-ins/Crochet)</h3>
-    <p><strong>💰 $30/hr</strong> | ⏱ 1+ hrs</p>
-  </div>
-
-  <div class="service-card">
-    <h3>30 Minute Consultation</h3>
-    <p><strong>💰 $30</strong> | ⏱ 30 mins</p>
-  </div>
-
-  <div class="service-card">
-    <h3>60 Minute Consultation</h3>
-    <p><strong>💰 $60</strong> | ⏱ 1 hr</p>
-  </div>
-</section>
-
-<!-- ✨ Footer -->
-<footer class="site-footer">
-  <p>Styled with Pride. Slayed with Love. 💖</p>
-  <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
-</footer>
+  <footer class="site-footer">
+    <p>Styled with Pride. Slayed with Love. 💖</p>
+    <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
+  </footer>
+</body>
+</html>
