--- a/booking.html
+++ b/booking.html
@@ -1,37 +1,42 @@
-<section id="booking">
-  <h1>🖤 Book With B.Lolo</h1>
-
-<!-- 🌟 B.Lolo Navigation Bar -->
-<nav class="navbar">
-  <div class="nav-brand">B.Lolo</div>
-  <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="booking.html">Book Now</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</nav>
-
-  
-  <div class="booking-policies">
-    <h2>Before You Book:</h2>
-    <ul>
-      <li>No deposit required to book.</li>
-      <li>Please cancel at least 24 hours in advance or a $30 cancellation fee will apply.</li>
-      <li>Hair is included for most styles unless stated otherwise.</li>
-      <li>Want color? Add it in your booking notes or text <a href="tel:3179385615">317-938-5615</a>.</li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B.Lolo | Book Now</title>
+  <link rel="stylesheet" href="style/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar">
+    <div class="nav-brand">B.Lolo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Book Now</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
-  </div>
+  </nav>
 
-  <div class="book-now-cta">
-    <a href="https://blolo.square.site" target="_blank" class="book-btn">✨ Secure Your Slay Now ✨</a>
-  </div>
-</section>
+  <section id="booking">
+    <h1>🖤 Book With B.Lolo</h1>
+    <div class="booking-policies">
+      <h2>Before You Book:</h2>
+      <ul>
+        <li>No deposit required to book.</li>
+        <li>Please cancel at least 24 hours in advance or a $30 cancellation fee will apply.</li>
+        <li>Hair is included for most styles unless stated otherwise.</li>
+        <li>Want color? Add it in your booking notes or text <a href="tel:3179385615">317-938-5615</a>.</li>
+      </ul>
+    </div>
+    <div class="book-now-cta">
+      <a href="https://blolo.square.site" target="_blank" class="book-btn">✨ Secure Your Slay Now ✨</a>
+    </div>
+  </section>
 
-<!-- ✨ Footer -->
-<footer class="site-footer">
-  <p>Styled with Pride. Slayed with Love. 💖</p>
-  <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
-</footer>
-
-
+  <footer class="site-footer">
+    <p>Styled with Pride. Slayed with Love. 💖</p>
+    <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
+  </footer>
+</body>
+</html>
