--- a/about.html
+++ b/about.html
@@ -1,16 +1,32 @@
-<!-- 🌟 B.Lolo Navigation Bar -->
-<nav class="navbar">
-  <div class="nav-brand">B.Lolo</div>
-  <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="booking.html">Book Now</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B.Lolo | About</title>
+  <link rel="stylesheet" href="style/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar">
+    <div class="nav-brand">B.Lolo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Book Now</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
 
-<!-- ✨ Footer -->
-<footer class="site-footer">
-  <p>Styled with Pride. Slayed with Love. 💖</p>
-  <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
-</footer>
+  <section class="about">
+    <h1>Meet B.Lolo</h1>
+    <p>I’m B.Lolo — stylist, safe space creator, and beauty disruptor. Whether you’re a bride, a boss, a baddie or a baby, your crown is in good hands.</p>
+    <p>I’m proud, I’m Black, I’m queer, and this chair is judgment-free. Come exactly as you are, and leave elevated.</p>
+  </section>
+
+  <footer class="site-footer">
+    <p>Styled with Pride. Slayed with Love. 💖</p>
+    <p>&copy; 2025 B.Lolo | Indianapolis, IN</p>
+  </footer>
+</body>
+</html>
