--- a/booking.html
+++ b/booking.html
@@ -18,12 +18,11 @@
     </ul>
   </nav>
 
-  <a href="https://blolo.square.site" target="_blank" class="book-btn">
-  <svg class="btn-icon" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-    <path d="M3 6l3 5 4-3 5 4 4-6 3 11H3z" />
-  </svg>
+  <a href="https://blolo.square.site" target="_blank" class="book-btn glam-text">
+  <svg class="btn-icon" ...></svg>
   Book Your Slay
 </a>
+
 
 
   <section id="booking">
