--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header class="hero">
     <h1>Welcome to B.Lolo’s World</h1>
-    <p>Hair that speaks volumes. Styles that stop traffic.</p>
+    <p>Where Hair Meets Health.</p>
     <a href="booking.html" class="book-btn">✨ Book Your Slay ✨</a>
   </header>
 
