--- a/booking.html
+++ b/booking.html
@@ -18,11 +18,6 @@
     </ul>
   </nav>
 
-  <a href="https://blolo.square.site" target="_blank" class="book-btn glam-text">
-  <svg class="btn-icon" ...></svg>
-  Book Your Slay
-</a>
-
 
 
   <section id="booking">
@@ -37,8 +32,12 @@
       </ul>
     </div>
     <div class="book-now-cta">
-      <a href="https://blolo.square.site" target="_blank" class="book-btn">✨ Secure Your Slay Now ✨</a>
-    </div>
+      <div class="book-now-cta">
+  <a href="https://blolo.square.site" target="_blank">
+    <img src="images/book-your-slay-btn.png" alt="Book Your Slay" class="custom-book-btn" />
+  </a>
+</div>
+
   </section>
 
   <footer class="site-footer">
