--- a/booking.html
+++ b/booking.html
@@ -33,6 +33,7 @@
     </div>
     <div class="book-now-cta">
       <div class="book-now-cta">
+  <div class="book-now-cta">
   <a href="https://blolo.square.site" target="_blank">
     <img src="images/book-your-slay-btn.png" alt="Book Your Slay" class="custom-book-btn" />
   </a>
