--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <header class="hero">
     <h1>Welcome to B.Lolo’s World</h1>
     <p>Where Hair Meets Health.</p>
-    <a href="booking.html" class="book-btn">✨ Book Your Slay ✨</a>
+   <a href="https://blolo.square.site" target="_blank">
+    <img src="images/book-your-slay-btn.png" alt="Book Your Slay" class="custom-book-btn" />
+  </a>
   </header>
 
   <!-- Footer -->
