--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     </ul>
   </nav>
 
-  <header class="hero">
+  <section class="hero-wrapper">
+  <div class="hero-inner">
     <h1>Welcome to B.Lolo’s World</h1>
-    <p>Where Hair Meets Health.</p>
-   <a href="https://blolo.square.site" target="_blank">
-    <img src="images/book-your-slay-btn.png" alt="Book Your Slay" class="custom-book-btn" />
-  </a>
-  </header>
+    <p>Where hair meets health.</p>
+    <a href="booking.html" class="book-btn">
+      <img src="images/book-your-slay-btn.png" alt="Book Your Slay" class="custom-book-btn" />
+    </a>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="site-footer">
