--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- ✅ ADD THIS: Sparkle dots scattered on the page -->
+<div class="sparkle" style="top: 20%; left: 30%; animation-delay: 0s;"></div>
+<div class="sparkle" style="top: 45%; left: 60%; animation-delay: 1s;"></div>
+<div class="sparkle" style="top: 70%; left: 40%; animation-delay: 1.5s;"></div>
+<div class="sparkle" style="top: 80%; left: 10%; animation-delay: 0.8s;"></div>
+<div class="sparkle" style="top: 35%; left: 85%; animation-delay: 2.2s;"></div>
+
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-brand">B.Lolo</div>
