--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <!-- ✅ ADD: Red Sparkle Points -->
+<div class="sparkle-red" style="top: 15%; left: 20%; animation-delay: 0.3s;"></div>
+<div class="sparkle-red" style="top: 40%; left: 75%; animation-delay: 1.2s;"></div>
+<div class="sparkle-red" style="top: 60%; left: 35%; animation-delay: 2.1s;"></div>
+<div class="sparkle-red" style="top: 80%; left: 50%; animation-delay: 1.7s;"></div>
+
   <!-- ✅ ADD THIS: Sparkle dots scattered on the page -->
 <div class="sparkle" style="top: 20%; left: 30%; animation-delay: 0s;"></div>
 <div class="sparkle" style="top: 45%; left: 60%; animation-delay: 1s;"></div>
