--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <div class="sparkle" style="top: 80%; left: 10%; animation-delay: 0.8s;"></div>
 <div class="sparkle" style="top: 35%; left: 85%; animation-delay: 2.2s;"></div>
 
+  <!-- ✅ ADD: Bling Sparkles -->
+<div class="bling" style="top: 10%; left: 30%; animation-delay: 0s;"></div>
+<div class="bling" style="top: 50%; left: 70%; animation-delay: 1s;"></div>
+<div class="bling" style="top: 80%; left: 40%; animation-delay: 2s;"></div>
+
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-brand">B.Lolo</div>
