--- a/services.html
+++ b/services.html
@@ -22,6 +22,11 @@
     <!-- Paste everything from the service menu doc here -->
     <!-- Start with: <section id="braids" class="service-category"> -->
     <!-- All sections will render perfectly with the CSS you've added -->
+<!-- ✅ ADD: Zebra Rip Section -->
+<div class="zebra-rip">
+  <h2 class="rip-text">Too Hot To Handle</h2>
+</div>
+
   </main>
 
   <footer class="site-footer">
