--- a/services.html
+++ b/services.html
@@ -21,50 +21,50 @@
   <main>
     <!-- Braids Section -->
     <section id="braids" class="service-category">
-      <h2 class="category-title">🔥 Braids</h2>
+      <h2 class="category-title">Braids</h2>
       <div class="service-card">
         <h3>Small Knotless Braids</h3>
-        <p><strong>💰 $300</strong> | ⏱ 10 hrs | ✅ Hair Included</p>
+        <p><strong>$300</strong> | 10 hrs | Hair Included</p>
         <p>Small size, mid-back length. Longer = add-on. Add color in booking note or text <a href="tel:3179385615">317-938-5615</a>.</p>
       </div>
       <div class="service-card">
         <h3>Knotless Braids – Large</h3>
-        <p><strong>💰 $130</strong> | ⏱ 3 hrs | ✅ Hair Included</p>
+        <p><strong>$130</strong> | 3 hrs | Hair Included</p>
         <p>Large size, mid-back length. Longer = add-on.</p>
       </div>
     </section>
 
-    <!-- ✅ Zebra Rip Section (Mid-Page Accent) -->
+    <!--  Zebra Rip Section (Mid-Page Accent) -->
     <div class="zebra-rip">
       <h2 class="rip-text">Too Hot To Handle</h2>
     </div>
 
     <!-- Kids Section -->
     <section id="kids" class="service-category">
-      <h2 class="category-title">🎀 Kids Styles (10 & Under)</h2>
+      <h2 class="category-title">Kids Styles (10 & Under)</h2>
       <div class="service-card">
         <h3>Kids Braids (No Weave)</h3>
-        <p><strong>💰 $60</strong> | ⏱ 3 hrs 30 mins</p>
+        <p><strong>$60</strong> | 3 hrs 30 mins</p>
         <p>Accessories? Leave your color scheme in notes or text 317-938-5615.</p>
       </div>
     </section>
 
     <!-- Natural Hair Section -->
     <section id="natural" class="service-category">
-      <h2 class="category-title">🌿 Natural Hair</h2>
+      <h2 class="category-title"> Natural Hair</h2>
       <div class="service-card">
         <h3>Natural Twist/Braid Style (No Hair Added)</h3>
-        <p><strong>💰 $75</strong> | ⏱ 2 hrs 30 mins</p>
+        <p><strong>$75</strong> | ⏱ 2 hrs 30 mins</p>
         <p>Medium size or larger. Text 317-938-5615 for inspo pics.</p>
       </div>
     </section>
 
     <!-- Silk Press Section -->
     <section id="silkpress" class="service-category">
-      <h2 class="category-title">💇🏽‍♀️ Silky Press</h2>
+      <h2 class="category-title">Silky Press</h2>
       <div class="service-card">
         <h3>Silk Press + Shampoo/Trim</h3>
-        <p><strong>💰 $80</strong> | ⏱ 2 hrs 30 mins</p>
+        <p><strong> $80</strong> | ⏱ 2 hrs 30 mins</p>
       </div>
     </section>
   </main>
